--- a/app/src/main/res/layout-land/tv_activity_send.xml
+++ b/app/src/main/res/layout-land/tv_activity_send.xml
@@ -32,8 +32,7 @@
                 android:layout_gravity="center|right"
                 android:layout_marginTop="@dimen/d24"
                 android:layout_weight="1"
-                android:background="@color/grey"
-                android:gravity="center"
+                android:gravity="center_horizontal"
                 android:orientation="vertical">
 
                 <TextView
@@ -51,8 +50,6 @@
                 android:layout_marginLeft="@dimen/d20"
                 android:layout_marginTop="@dimen/d24"
                 android:layout_weight="1"
-                android:background="@color/grey"
-                android:gravity="center_vertical"
                 android:orientation="vertical">
 
                 <TextView
@@ -64,17 +61,17 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/d24"
                     android:text="@string/account_address"
                     android:textColor="@color/red_da261f" />
 
                 <EditText
                     android:id="@+id/et_input_destination_address"
-                    style="@style/black_14_edit_text_style"
+                    style="@style/white_16_text_style"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginBottom="@dimen/d16"
-                    android:enabled="false"
                     android:layout_marginTop="@dimen/d16"
                     android:layout_toLeftOf="@+id/ib_scan_address"
                     android:background="@color/transparent"
@@ -83,7 +80,7 @@
                     android:inputType="textMultiLine"
                     android:lineSpacingExtra="@dimen/d3"
                     android:maxLines="2"
-                    android:textColorHint="@color/black30_1d2124"
+                    android:textColorHint="@color/white"
                     android:textCursorDrawable="@drawable/edit_text_cursor_drawable" />
 
                 <TextView
@@ -94,7 +91,7 @@
 
                 <EditText
                     android:id="@+id/et_transaction_amount"
-                    style="@style/black_14_single_edit_text_style"
+                    style="@style/white_16_single_edit_text_style"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_transaction_amount_key"
