--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -209,6 +209,17 @@
         <item name="android:textColor">@color/black_1d2124</item>
     </style>
 
+    <style name="white_16_single_edit_text_style" parent="marquee_style">
+        <item name="android:layout_height">@dimen/d32</item>
+        <item name="android:cursorVisible">true</item>
+        <item name="android:textCursorDrawable">@drawable/edit_text_cursor_drawable</item>
+        <item name="android:layout_marginTop">@dimen/d16</item>
+        <item name="android:textSize">@dimen/text_size_16</item>
+        <item name="android:background">@drawable/bg_edit_text</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textColor">@color/black_1d2124</item>
+    </style>
+
     <style name="black_14_edit_text_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -309,7 +320,7 @@
     <style name="tv_layout_bg">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:background">@drawable/tv_block_bg_layout_d</item>
+        <item name="android:background">@color/tv_black_101010</item>
         <item name="android:paddingTop">@dimen/d30</item>
         <item name="android:paddingBottom">@dimen/d30</item>
         <item name="android:paddingLeft">@dimen/d60</item>
@@ -351,6 +362,13 @@
         <item name="android:textSize">@dimen/text_size_18</item>
     </style>
 
+    <style name="white_16_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_16</item>
+    </style>
+
     <style name="white_12_text_style" parent="marquee_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -368,7 +386,7 @@
     <style name="tv_layout_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:background">@color/grey</item>
+        <item name="android:background">@drawable/tv_block_bg_layout_d</item>
         <item name="android:paddingLeft">@dimen/d12</item>
         <item name="android:paddingRight">@dimen/d12</item>
     </style>
