--- a/app/src/main/res/layout-land/tv_activity_send.xml
+++ b/app/src/main/res/layout-land/tv_activity_send.xml
@@ -69,7 +69,7 @@
                     android:id="@+id/et_input_destination_address"
                     style="@style/white_16_text_style"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/d35"
                     android:layout_centerVertical="true"
                     android:layout_marginBottom="@dimen/d16"
                     android:layout_marginTop="@dimen/d16"
@@ -93,7 +93,7 @@
                     android:id="@+id/et_transaction_amount"
                     style="@style/white_16_single_edit_text_style"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/d40"
                     android:layout_below="@+id/tv_transaction_amount_key"
                     android:layout_centerVertical="true"
                     android:layout_marginBottom="@dimen/d16"
