--- a/app/src/main/res/layout-land/tv_activity_setting.xml
+++ b/app/src/main/res/layout-land/tv_activity_setting.xml
@@ -88,7 +88,7 @@
             <LinearLayout
                 android:layout_width="@dimen/d0"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/d162"
+                android:layout_marginLeft="@dimen/d100"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -130,7 +130,7 @@
                         android:id="@+id/et_input_representatives"
                         style="@style/white_18_text_style"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/d35"
                         android:layout_below="@+id/tv_title"
                         android:layout_centerVertical="true"
                         android:layout_marginBottom="@dimen/d16"
