--- a/app/src/main/res/layout-land/tv_activity_home.xml
+++ b/app/src/main/res/layout-land/tv_activity_home.xml
@@ -13,104 +13,141 @@
         android:background="@mipmap/tv_block_select"
         android:visibility="gone" />
 
-    <LinearLayout
-        style="@style/tv_layout_bg"
-        android:orientation="vertical">
-        <include layout="@layout/tv_include_header" />
+    <RelativeLayout style="@style/tv_layout_bg">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/d24"
-            android:orientation="horizontal">
+            style="@style/tv_layout_bg"
+            android:orientation="vertical">
+
+            <include layout="@layout/tv_include_header" />
 
             <LinearLayout
-                android:layout_width="@dimen/d0"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:layout_marginTop="@dimen/d24"
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    style="@style/tv_layout_style"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/d0"
+                    android:layout_width="@dimen/d0"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <include layout="@layout/tv_include_account_info" />
+                    <LinearLayout
+                        style="@style/tv_layout_style"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/d0"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
 
+                        <include layout="@layout/tv_include_account_info" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        style="@style/white_24_text_style"
+                        android:layout_marginTop="@dimen/d16"
+                        android:text="@string/my_account" />
                 </LinearLayout>
 
-                <TextView
-                    style="@style/white_24_text_style"
-                    android:layout_marginTop="@dimen/d16"
-                    android:text="@string/my_account" />
+                <LinearLayout
+                    android:layout_width="@dimen/d0"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/d100"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        style="@style/tv_layout_style"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/d0"
+                        android:layout_weight="1">
+
+                        <ImageView
+                            android:id="@+id/iv_no_record"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:layout_marginTop="@dimen/d20"
+                            android:src="@mipmap/img_no_data"
+                            android:visibility="invisible" />
+
+                        <TextView
+                            android:id="@+id/tv_no_transaction_record"
+                            style="@style/black30_14_text_style"
+                            android:layout_below="@+id/iv_no_record"
+                            android:layout_centerHorizontal="true"
+                            android:text="@string/no_transaction_records"
+                            android:visibility="invisible" />
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/rv_account_transaction_record"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_above="@+id/tv_loading_more"
+                            android:scrollbars="none"
+                            tools:listitem="@layout/item_transaction" />
+
+                        <TextView
+                            android:id="@+id/tv_loading_more"
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/d40"
+                            android:layout_alignParentBottom="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginBottom="@dimen/d5"
+                            android:background="@color/transparent"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true"
+                            android:gravity="center"
+                            android:text="@string/show_more"
+                            android:textColor="@color/white"
+                            android:visibility="visible" />
+
+                    </RelativeLayout>
+
+                    <TextView
+                        style="@style/white_24_text_style"
+                        android:layout_marginTop="@dimen/d16"
+                        android:text="@string/transaction_records" />
+                </LinearLayout>
             </LinearLayout>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_show_currency"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/black30_1d2124"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="bottom"
+            android:orientation="vertical"
+            android:visibility="gone">
+
             <LinearLayout
-                android:layout_width="@dimen/d0"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/d100"
-                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/d200"
+                android:background="@color/white"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <RelativeLayout
-                    style="@style/tv_layout_style"
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_list"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/d0"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:id="@+id/iv_no_record"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:layout_marginTop="@dimen/d20"
-                        android:src="@mipmap/img_no_data"
-                        android:visibility="invisible" />
-
-                    <TextView
-                        android:id="@+id/tv_no_transaction_record"
-                        style="@style/black30_14_text_style"
-                        android:layout_below="@+id/iv_no_record"
-                        android:layout_centerHorizontal="true"
-                        android:text="@string/no_transaction_records"
-                        android:visibility="invisible" />
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/rv_account_transaction_record"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_above="@+id/tv_loading_more"
-                        android:scrollbars="none"
-                        tools:listitem="@layout/item_transaction" />
-
-                    <TextView
-                        android:id="@+id/tv_loading_more"
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/d40"
-                        android:layout_alignParentBottom="true"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginBottom="@dimen/d5"
-                        android:background="@color/transparent"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:focusableInTouchMode="true"
-                        android:gravity="center"
-                        android:text="@string/show_more"
-                        android:textColor="@color/white"
-                        android:visibility="visible" />
-
-                </RelativeLayout>
-
-                <TextView
-                    style="@style/white_24_text_style"
-                    android:layout_marginTop="@dimen/d16"
-                    android:text="@string/transaction_records" />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:scrollbars="none"
+                    tools:listitem="@layout/tv_item_pop_currency_list" />
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
+
+
 </io.bcaas.view.tv.MainUpLayout>
