--- a/app/src/main/res/layout-land/tv_item_pop_currency_list.xml
+++ b/app/src/main/res/layout-land/tv_item_pop_currency_list.xml
@@ -2,16 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/d40"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:focusable="true"
+    android:id="@+id/rl_tv_show_currency"
+    android:focusableInTouchMode="true">
 
     <TextView
         android:id="@+id/tv_content"
         style="@style/black_16_text_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_centerInParent="true"
-        android:ellipsize="middle" />
+        android:ellipsize="middle"
+        android:gravity="center" />
 
     <View
         android:layout_width="match_parent"
