设置TV「交易数额」只能输入8位小数

--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -240,9 +240,9 @@
                     android:layout_below="@+id/tv_transaction_amount_key"
                     android:layout_marginBottom="@dimen/d20"
                     android:layout_marginTop="@dimen/d16"
-                    android:digits="0123456789."
-                    android:inputType="numberDecimal"
+                    android:digits="@string/amount_edit_digits"
                     android:hint="@string/please_enter_transaction_amount"
+                    android:inputType="numberDecimal"
                     android:textColor="@color/orange_yellow"
                     android:textSize="@dimen/text_size_18" />
 
