--- a/app/src/main/res/layout-land/tv_activity_send.xml
+++ b/app/src/main/res/layout-land/tv_activity_send.xml
@@ -105,8 +105,9 @@
                         android:layout_toLeftOf="@+id/ib_scan_address"
                         android:background="@color/transparent"
                         android:cursorVisible="true"
+                        android:digits="@string/amount_edit_digits"
                         android:hint="@string/please_enter_transaction_amount"
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:singleLine="true"
                         android:textColor="@color/orange_yellow"
                         android:textSize="@dimen/text_size_18" />
