--- a/app/src/main/res/drawable/tv_rl_bg_d.xml
+++ b/app/src/main/res/drawable/tv_rl_bg_d.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <!-- android:radius 弧形的半径 -->
-    <corners android:radius="@dimen/d2" />
+    <corners android:radius="@dimen/d4" />
     <!-- padding：Button里面的文字与Button边界的间隔 -->
     <!--<padding-->
     <!--android:bottom="@dimen/d2"-->
@@ -13,8 +13,8 @@
     <!-- 边框的宽度和颜色颜色 -->
     <stroke
         android:width="@dimen/d0.5"
-        android:color="@color/blue" />
+        android:color="@color/black_1d2124" />
 
     <!-- 背景色 -->
-    <solid android:color="@color/blue"></solid>
+    <solid android:color="@color/grey3"></solid>
 </shape>
