--- a/app/src/main/res/layout-land/tv_activity_setting.xml
+++ b/app/src/main/res/layout-land/tv_activity_setting.xml
@@ -38,7 +38,8 @@
                     android:layout_height="@dimen/d0"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="@dimen/d24">
 
                     <TextView
                         style="@style/white_20_text_style"
@@ -48,6 +49,7 @@
                         style="@style/white_18_text_style"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/d10"
                         android:text="@string/save_private_key_hint" />
 
                     <TextView
@@ -55,7 +57,7 @@
                         style="@style/white_12_text_style"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/d5"
+                        android:layout_marginTop="@dimen/d10"
                         android:background="@drawable/tv_blue_button_selector"
                         android:clickable="true"
                         android:focusable="true"
@@ -68,7 +70,7 @@
                         style="@style/white_14_text_style"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/d5"
+                        android:layout_marginTop="@dimen/d10"
                         android:background="@color/transparent"
                         android:focusable="true"
                         android:focusableInTouchMode="true"
@@ -99,7 +101,8 @@
                     style="@style/tv_layout_style"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/d0"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:gravity="center_vertical">
 
                     <TextView
                         android:id="@+id/tv_my_address_key"
@@ -147,6 +150,7 @@
                         android:id="@+id/btn_sure"
                         style="@style/tv_button_style"
                         android:layout_below="@+id/et_input_representatives"
+                        android:layout_marginTop="@dimen/d10"
                         android:text="@string/confirm" />
 
                 </RelativeLayout>
