--- a/app/src/main/res/layout-land/tv_activity_home.xml
+++ b/app/src/main/res/layout-land/tv_activity_home.xml
@@ -89,8 +89,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_above="@+id/tv_loading_more"
+                            android:clickable="false"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
                             android:scrollbars="none"
-                            tools:listitem="@layout/item_transaction" />
+                            tools:listitem="@layout/tv_item_transaction" />
 
                         <TextView
                             android:id="@+id/tv_loading_more"
