--- a/app/src/main/res/layout/layout_bcaas_dialog.xml
+++ b/app/src/main/res/layout/layout_bcaas_dialog.xml
@@ -53,6 +53,9 @@
             android:background="@color/transparent"
             android:gravity="center"
             android:text="@string/confirm"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:clickable="true"
             android:textAllCaps="false"
             android:textColor="@color/black50_1d2124"
             android:textSize="@dimen/text_size_16" />
@@ -70,6 +73,9 @@
             android:background="@color/transparent"
             android:gravity="center"
             android:textAllCaps="false"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:clickable="true"
             android:text="@string/cancel"
             android:textColor="@color/black50_1d2124"
             android:textSize="@dimen/text_size_16" />
