--- a/app/src/main/res/layout-land/tv_activity_login.xml
+++ b/app/src/main/res/layout-land/tv_activity_login.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <io.bcaas.view.tv.MainUpLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bcaas="http://schemas.android.com/apk/res-auto"
     android:id="@+id/block_base_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
