--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,9 @@
     <color name="white">#ffffff</color>
     <color name="white70">#b3ffffff</color>
     <color name="whited5">#D5D5D5</color>
+    <!--TV white-->
+    <color name="white_f1f1f1">#F1F1F1</color>
+    <color name="white70_f1f1f1">#b3F1F1F1</color>
 
 
     <color name="red">#DA261F</color>
